# auto-prophet-tune-92125

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  create-project-part2.sh  create-project-part3.sh  create-project-part4.sh  create-project.sh  index.html  package-lock.json  package.json  render.yaml  sample_timeseries.csv  setup-all.sh  vite.config.ts
.claude/: settings.json
.claude/commands/: add-forecast-component.md  add-ui-component.md  build.md  dev.md  lint.md  structure.md  supabase.md  types.md
apps/forecast-api/: Dockerfile  README.md  pyproject.toml  sample-data.csv
apps/forecast-api/app/: forecasting.py  main.py  metrics.py  schemas.py
docs/: AUTOGLUON_DEBUG_GUIDE.md  AZURE_FUNCTION_INTEGRATION.md  UI_ENHANCEMENTS.md
forecast-service/: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
forecast-service/app/: auth.py  db.py  jobs.py  main.py  metrics.py  schemas.py  utils.py
forecast-service/tests/: test_auth.py  test_autogluon_model.py  test_db.py  test_dispatch.py  test_endpoint.py  test_jobs.py  test_metrics.py  test_prophet_model.py  test_utils.py
public/: forecast.html
src/: App.tsx  index.css
src/hooks/: useForecast.ts
src/lib/: forecastClient.ts
src/pages/: Auth.tsx  Index.tsx  Models.tsx  Reports.tsx
src/services/: azureFunctionService.ts
src/types/: dataAnalysis.ts  forecast.ts  forecastResults.ts
src/utils/: dataAnalysis.ts  stationaryChart.test.ts  stationaryChart.ts
supabase/: config.toml
supabase/migrations/: 20251030153224_2548a3e8-17a3-4085-91f5-dabb70ecbcdb.sql  (+3 more)
(+34 files in other folders)
