[project]
name = "forecast-api"
version = "0.1.0"
description = "Prophet forecasting backend for auto-prophet-tune"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prophet>=1.1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.7",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
